<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/navigation_expense"
        android:icon="@drawable/ic_chart_donut"
        android:title="@string/nav_expense" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add"
        android:title="@string/nav_add" />

    <item
        android:id="@+id/navigation_transaction"
        android:icon="@drawable/ic_transfer"
        android:title="@string/nav_transaction" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person"
        android:title="Profil" />
</menu>
